# parity-posttrain

./: .gitignore  README.md  pyproject.toml
data/: sample_tasks.jsonl
scripts/: check_ml_runtime.py  demo_evaluator.py  generate_tasks.py  run_agent_benchmark.py  run_agent_closed_loop.py  run_agent_parity.py  run_agent_smoke.py  run_controlled_parity.py  run_hf_parity.py  run_hf_smoke.py  run_parity_matrix.py  run_token_clipping_diagnostics.py  run_training_comparison.py  summarize_controlled_parity.py
tests/: test_agent_benchmark.py  test_agent_closed_loop.py  test_agent_closed_loop_cli.py  test_agent_protocol.py  test_agent_runner.py  test_closed_loop.py  test_closed_loop_artifact.py  test_closed_loop_rerollout.py  test_closed_loop_runner.py  test_controlled_parity_cli.py  test_controlled_summary.py  test_controlled_summary_script.py  test_forced_sequence.py  test_hf_backend.py  test_hf_backend_revision.py  test_logprob_parity.py  test_parity_fixture.py  test_parity_matrix.py  test_parity_matrix_cli.py  test_parity_matrix_runner.py  test_provenance.py  test_task.py  test_task_factory.py  test_token_clipping_diagnostics_cli.py  test_tool_registry.py  test_tools.py  test_training_artifact.py  test_training_batch.py  test_training_comparison.py  test_training_comparison_cli.py  test_training_comparison_runner.py  test_training_diagnostics.py  test_training_example.py  test_training_logprobs.py  test_training_loop.py  test_training_objective.py  test_training_parameters.py  test_training_step.py  test_trajectory.py  test_trajectory_evaluator.py  (+2 more)
(+37 files in other folders)
